--- a/docker/telegraf.conf
+++ b/docker/telegraf.conf
@@ -13,5 +13,5 @@
   omit_hostname = false
 
 [[outputs.influxdb]]
-  database = "metrics"
-  urls = ["http://influxdb:8086"]
+  database = "${INFLUXDB_DB}"
+  urls = ["http://${INFLUXDB_WRITE_USER}:${INFLUXDB_WRITE_USER_PASSWORD}@influxdb:8086"]
