--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8083:8083"
       - "8086:8086"
     volumes:
+      - ./docker/ssl:/etc/ssl/self-signed
       - influxdb-storage:/var/lib/influxdb
     restart: always
 
