--- a/docker/telegraf.conf
+++ b/docker/telegraf.conf
@@ -13,5 +13,10 @@
   omit_hostname = false
 
 [[outputs.influxdb]]
+  urls = ["https://influxdb:8086"]
+  username = "${INFLUXDB_WRITE_USER}"
+  password = "${INFLUXDB_WRITE_USER_PASSWORD}"
   database = "${INFLUXDB_DB}"
-  urls = ["http://${INFLUXDB_WRITE_USER}:${INFLUXDB_WRITE_USER_PASSWORD}@influxdb:8086"]
+  skip_database_creation = true
+  insecure_skip_verify = true
+  content_encoding = "gzip"
