Add last payments to Flexpool dashboard
Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/telegraf/flexpool.conf
+++ b/telegraf/flexpool.conf
@@ -43,3 +43,14 @@
   tagexclude = ["url"]
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
+
+[[inputs.http]]
+  name_override = "flexpool_payments"
+  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/payments/?page=0"]
+  data_format = "json"
+  tagexclude = ["url"]
+  json_query = "result.data"
+  json_time_format = "unix"
+  json_time_key = "timestamp"
+  [inputs.http.tags]
+    miner = "${MINER_ADDRESS}"
