--- a/telegraf/flexpool.conf
+++ b/telegraf/flexpool.conf
@@ -1,11 +1,17 @@
 [[inputs.http]]
+  name_override = "flexpool_pool_block_count"
+  urls = ["https://flexpool.io/api/v1/pool/blockCount"]
+  data_format = "json"
+  tagexclude = ["url"]
+  json_query = "result"
+
+[[inputs.http]]
   name_override = "flexpool_balance"
   urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/balance"]
   data_format = "json"
   tagexclude = ["url"]
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
-
 
 [[inputs.http]]
   name_override = "flexpool_stats"
