--- a/docker/environment.example
+++ b/docker/environment.example
@@ -1,6 +1,7 @@
 MINER_ADDRESS=
 HIVEOS_TOKEN=
 ETHERSCAN_TOKEN=
+ETHGASSTATION_TOKEN=
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=
 GF_USERS_DEFAULT_THEME=light
