feat: add Chia support for Flexpool (#8)
- Update Telegraf to 1.19.2
- Use Flexpool API v2
- Update Flexpool miner, pool and worker dashboards accordingly
- Add COIN environment variable for Telegraf ("eth" or "xch" supported)
- Add coin variable in Grafana dashboards

BREAKING CHANGE: measurement names change between API v1 and v2 so the
Grafana dashboards must be updated accordingly to use new names.
Values in the past will not be shown by the updated dashboards.

Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/telegraf/currencies.conf
+++ b/telegraf/currencies.conf
@@ -18,6 +18,26 @@
     from = "ETH"
     to = "USD"
 
+[[inputs.http]]
+  name_override = "currencies"
+  urls = ["https://api.coingecko.com/api/v3/simple/price?ids=chia&vs_currencies=eur"]
+  data_format = "json"
+  tagexclude = ["url"]
+  json_query = "chia"
+  [inputs.http.tags]
+    from = "XCH"
+    to = "EUR"
+
+[[inputs.http]]
+  name_override = "currencies"
+  urls = ["https://api.coingecko.com/api/v3/simple/price?ids=chia&vs_currencies=usd"]
+  data_format = "json"
+  tagexclude = ["url"]
+  json_query = "chia"
+  [inputs.http.tags]
+    from = "XCH"
+    to = "USD"
+
 [[processors.rename]]
   namepass = ["currencies"]
   [[processors.rename.replace]]
