--- a/telegraf/flexpool-miner.conf
+++ b/telegraf/flexpool-miner.conf
@@ -1,51 +1,49 @@
 [[inputs.http]]
   name_override = "flexpool_miner_balance"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/balance"]
+  urls = ["https://api.flexpool.io/v2/miner/balance?coin=${COIN}&address=${MINER_ADDRESS}"]
   data_format = "json"
-  tagexclude = ["url"]
-  [inputs.http.tags]
-    miner = "${MINER_ADDRESS}"
-
-[[inputs.http]]
-  name_override = "flexpool_miner_stats"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/stats"]
-  data_format = "json"
-  fieldpass = ["*hashrate", "*shares"]
   tagexclude = ["url"]
   json_query = "result"
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
+    coin = "${COIN}"
+
+[[inputs.http]]
+  name_override = "flexpool_miner_stats"
+  urls = ["https://api.flexpool.io/v2/miner/stats?coin=${COIN}&address=${MINER_ADDRESS}"]
+  data_format = "json"
+  fieldpass = ["*Hashrate", "*Shares"]
+  tagexclude = ["url"]
+  json_query = "result"
+  [inputs.http.tags]
+    miner = "${MINER_ADDRESS}"
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_miner_workers"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/workers"]
+  urls = ["https://api.flexpool.io/v2/miner/workers?coin=${COIN}&address=${MINER_ADDRESS}"]
   data_format = "json"
   tagexclude = ["url"]
-  fieldpass = ["*hashrate", "*shares"]
+  fieldpass = ["*Hashrate", "*Shares"]
   tag_keys = ["name"]
   json_query = "result"
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_miner_paid"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/totalPaid"]
+  urls = ["https://api.flexpool.io/v2/miner/paymentsStats?coin=${COIN}&address=${MINER_ADDRESS}"]
   data_format = "json"
   tagexclude = ["url"]
+  json_query = "result"
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
-
-[[inputs.http]]
-  name_override = "flexpool_miner_daily_revenue_estimation"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/estimatedDailyRevenue"]
-  data_format = "json"
-  tagexclude = ["url"]
-  [inputs.http.tags]
-    miner = "${MINER_ADDRESS}"
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_miner_payments"
-  urls = ["https://flexpool.io/api/v1/miner/${MINER_ADDRESS}/payments/?page=0"]
+  urls = ["https://api.flexpool.io/v2/miner/payments?coin=${COIN}&address=${MINER_ADDRESS}&page=0"]
   data_format = "json"
   tagexclude = ["url"]
   json_query = "result.data"
@@ -53,3 +51,4 @@
   json_time_key = "timestamp"
   [inputs.http.tags]
     miner = "${MINER_ADDRESS}"
+    coin = "${COIN}"
