--- a/telegraf/flexpool-pool.conf
+++ b/telegraf/flexpool-pool.conf
@@ -1,18 +1,22 @@
 [[inputs.http]]
-  name_override = "flexpool_pool_block_count"
-  urls = ["https://flexpool.io/api/v1/pool/blockCount"]
+  name_override = "flexpool_pool_blocks_chart"
+  urls = ["https://api.flexpool.io/v2/pool/blocksChart?coin=${COIN}"]
   data_format = "json"
   tagexclude = ["url"]
   json_query = "result"
+  json_time_format = "unix"
+  json_time_key = "timestamp"
+  [inputs.http.tags]
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_pool_blocks"
   urls = [
-    "https://flexpool.io/api/v1/pool/blocks/?page=0",
-    "https://flexpool.io/api/v1/pool/blocks/?page=1",
-    "https://flexpool.io/api/v1/pool/blocks/?page=2",
-    "https://flexpool.io/api/v1/pool/blocks/?page=3",
-    "https://flexpool.io/api/v1/pool/blocks/?page=4"
+    "https://api.flexpool.io/v2/pool/blocks?coin=${COIN}&page=0",
+    "https://api.flexpool.io/v2/pool/blocks?coin=${COIN}&page=1",
+    "https://api.flexpool.io/v2/pool/blocks?coin=${COIN}&page=2",
+    "https://api.flexpool.io/v2/pool/blocks?coin=${COIN}&page=3",
+    "https://api.flexpool.io/v2/pool/blocks?coin=${COIN}&page=4"
   ]
   data_format = "json"
   tagexclude = ["url"]
@@ -20,35 +24,38 @@
   json_time_format = "unix"
   json_time_key = "timestamp"
   tag_keys = ["miner"]
+  [inputs.http.tags]
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_pool_hashrate"
-  urls = ["https://flexpool.io/api/v1/pool/hashrate"]
+  urls = ["https://api.flexpool.io/v2/pool/hashrate?coin=${COIN}"]
   data_format = "json"
   tagexclude = ["url"]
   json_query = "result"
+  [inputs.http.tags]
+    coin = "${COIN}"
 
 [[inputs.http]]
-  name_override = "flexpool_pool_miners_online"
-  urls = ["https://flexpool.io/api/v1/pool/minersOnline"]
+  name_override = "flexpool_pool_miners_count"
+  urls = ["https://api.flexpool.io/v2/pool/minerCount?coin=${COIN}"]
   data_format = "json"
   tagexclude = ["url"]
+  [inputs.http.tags]
+    coin = "${COIN}"
 
 [[inputs.http]]
-  name_override = "flexpool_pool_workers_online"
-  urls = ["https://flexpool.io/api/v1/pool/workersOnline"]
+  name_override = "flexpool_pool_workers_count"
+  urls = ["https://api.flexpool.io/v2/pool/workerCount?coin=${COIN}"]
   data_format = "json"
   tagexclude = ["url"]
-
-[[inputs.http]]
-  name_override = "flexpool_pool_average_luck_round_time"
-  urls = ["https://flexpool.io/api/v1/pool/avgLuckRoundtime"]
-  data_format = "json"
-  tagexclude = ["url"]
-  json_query = "result"
+  [inputs.http.tags]
+    coin = "${COIN}"
 
 [[inputs.http]]
   name_override = "flexpool_pool_current_luck"
-  urls = ["https://flexpool.io/api/v1/pool/currentLuck"]
+  urls = ["https://api.flexpool.io/v2/pool/currentLuck?coin=${COIN}"]
   data_format = "json"
   tagexclude = ["url"]
+  [inputs.http.tags]
+    coin = "${COIN}"
